result/namespaces/err_8.xml.err
./test/namespaces/err_8.xml:1: error: xml namespace prefix mapped to wrong URI
<tst xmlns:xml="http://example.com/"/>
                                    ^
